[gd_scene load_steps=8 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Mndo.gd" type="Script" id=2]
[ext_resource path="res://Gost.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interfaz.tscn" type="PackedScene" id=4]
[ext_resource path="res://fondo/22856.png" type="Texture" id=5]
[ext_resource path="res://Sonidos/Sonidos/[Chiptune Adventures] 1.ogg" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, 0, 0 )
}

[node name="Mndo" type="Node"]
script = ExtResource( 2 )
Gost = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -1.99997
margin_top = -7.0
margin_right = 1030.0
margin_bottom = 601.0
texture = ExtResource( 5 )
expand = true

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 747, 371 )

[node name="GostTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="PunteoTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="InicioTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PosicionDeinicio" type="Position2D" parent="."]
position = Vector2( 640, 360 )

[node name="camino" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="GostPosicion" type="PathFollow2D" parent="camino"]

[node name="Interfaz" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="golpe" from="player" to="." method="game_over"]
[connection signal="timeout" from="GostTimer" to="." method="_on_GostTimer_timeout"]
[connection signal="timeout" from="PunteoTimer" to="." method="_on_PunteoTimer_timeout"]
[connection signal="timeout" from="InicioTimer" to="." method="_on_InicioTimer_timeout"]
[connection signal="iniciar_juego" from="Interfaz" to="." method="nuevo_juego"]
